# emscripten-test

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Dockerfile  README.md  build.sh  emcmake.bat  emcmakebuild.bat  index.html  test.js
dependencies/jsoncpp/: jsoncpp.cpp
src/: main.cpp
src/utilities/core/: Assert.hpp  Compare.cpp  Compare.hpp  Json.cpp  Logger.hpp  UUID.cpp  UUID.hpp
src/utilities/data/: Matrix.cpp  Matrix.hpp
src/utilities/geometry/: Emscripten.cpp  FloorplanJS.cpp  FloorplanJS.hpp  Geometry.cpp  Geometry.hpp  Point3d.cpp  Point3d.hpp  ThreeJS.cpp  ThreeJS.hpp  Vector3d.cpp  Vector3d.hpp
